--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon serer.js"
+    "test": "./node_modules/mocha/bin/mocha",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,8 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "chai": "^4.3.7",
+    "mocha": "^9.2.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20"
   }
